# asp-iasa

./: .gitignore  README.md  pyproject.toml
.misc/tests/: Sound Processing Lab1.md  module1.md
notebooks/: audio-lab-1--mega-final.ipynb  audio-lab-1-final.ipynb  audio-lab-1-final_1.ipynb  audio-lab1-v2.ipynb  hw1.ipynb  hw1_v2.ipynb  lab1-fixed-validation.ipynb
src/models/vad/: __init__.py  base.py  energy.py  k_means.py  silero.py  speechbrain.py  zff.py
src/utils/: metrics.py  wav_utils.py
